# finance_microservices

./: .env.example  .gitignore  README.md  docker-compose.yml  go.work.sum  package-lock.json  package.json
auth-service/: Dockerfile  go.mod  main.go
database/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/services/: api.js  authService.js  marketService.js  portfolioService.js
frontend/src/stores/: user.ts
frontend/src/styles/: main.css
frontend/src/styles/base/: reset.css  variables.css
frontend/src/styles/components/: trade.css
frontend/src/styles/utilities/: helpers.css
frontend/src/views/: Dashboard.vue  Login.vue  Trade.vue  TransactionHistory.vue
make-data-service/: Cargo.toml  Dockerfile  build.rs
make-data-service/src/: main.rs
nginx/: Dockerfile  Dockerfile_ser  nginx.conf
portfolio-service/: Dockerfile  go.mod  go.sum  main.go
portfolio-service/database/: db.go
portfolio-service/grpc-client/: market_client.go
portfolio-service/handlers/: handlers.go
portfolio-service/models/: models.go
portfolio-service/services/: portfolio.go
proto/: auth.proto  market.proto  portfolio.proto
proto/go/: go.mod
proto/go/market/: market.pb.go  market.proto  market_grpc.pb.go
proto/rust/: auth.proto  market.proto  portfolio.proto
