[package]
name = "make-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.23", features = ["json"] }