[package]
name = "make-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.1", features = ["server"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
reqwest = { version = "0.12.23", features = ["json"] }
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.1"
futures = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.1"
